# HomeworkSPBU

./: README.md
BinaryTries/: BinaryTree.c  BinaryTree.h  CMakeLists.txt  main.c
FloydWarshall_Graph_OOP/: CMakeLists.txt  GraphManager.cpp  GraphManager.h  main.cpp
Floyd–Warshall Graph/: CMakeLists.txt  Edge.cpp  Edge.h  main.cpp
Sem2Task2/: Band.cpp  Band.h  Bandit.cpp  Bandit.h  CMakeLists.txt  main.cpp  names.txt
Sem2Task3/: List.h  main.cpp
Sem2Task4/: CMakeLists.txt  List.h  Monom.h  main.cpp
Sem2Task5/: CMakeLists.txt  Stack.h  main.cpp
Sem2Task6/: CMakeLists.txt  Queue.h  RequestQueue.cpp  RequestQueue.h  main.cpp
Sem2Task7/: BinTree.cpp  BinTree.h  CMakeLists.txt  main.cpp
Sem2Task8/: CMakeLists.txt
Sem3Task2/: CMakeLists.txt  Func.cpp  Func.h  main.cpp  test.cpp
Sem3Task3/: CMakeLists.txt  Func.cpp  Func.h  main.cpp  test.cpp
Sem3Task4/: CMakeLists.txt  Func.cpp  Func.h  test.cpp
Sem3Task5/: CMakeLists.txt  CustomList.h  main.cpp
Sem3Task6/: CMakeLists.txt  Func.cpp  Func.h  test.cpp
Sem3Task7/: CMakeLists.txt  Func.cpp  Func.h  main.cpp  test.cpp
Sem3Task8/: CMakeLists.txt  Monomial.cpp  Monomial.h  Polynomial.cpp  Polynomial.h  main.cpp  test.cpp
